--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -3,3 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+  ::-webkit-scrollbar {
+    width: 0.5em;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 18, 18);
+    box-shadow: inset 1px 1px 5px rgba(153, 153, 153, 0.5);
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(204, 204, 204, 1);
+    box-shadow: inset 1px 1px 5px rgba(153, 153, 153, 1);
+  }
